infra/k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mishmob-ingress
spec:
  tls:
  - hosts:
    - mishmob.com
    - www.mishmob.com
    secretName: mishmob-tls
  rules:
  - host: mishmob.com
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              number: 80
  - host: www.mishmob.com
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: web-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              number: 80
